tests/test2/pass/test-floatMatrixAccess.m2
int main(){
	int a;
	int b;
	matrix float [2][1] m;
  	m = [[2.0];
         [3.2]];
    a = 0;
    b = 0;
    printFloat(m[a][b]);

	return 0;
}