tests/test2/fail/fail-matrixBinop5.m2
int main(){
	matrix int [3][2] m;
	matrix float [3][2] m2;
  	m = [[2,9];
        [0,2];
        [1,1]];
    m2 = [[2.0,9.0];
        [0.0,2.0];
        [1.0,1.0]];
    
    m + m2;

    return 0;
}